Rebranding - Logo Change
1. Logo Name Change
2. Favicon change
3. Loading pic name change
4. Management section kibana to haystack name change

Signed-off-by: RashmiRam <rashmi@freshdesk.com>

--- a/src/ui/views/ui_app.jade
+++ b/src/ui/views/ui_app.jade
@@ -93,7 +93,7 @@ block content
       .kibanaLoader__logo
         .kibanaWelcomeLogo
       .kibanaLoader__content
-        | Loading Kibana
+        | Loading Haystack
 
   script.
     window.onload = function () {
